--- a/WebContent/chart.html
+++ b/WebContent/chart.html
@@ -3,10 +3,13 @@
 <head>
 <script type="text/javascript" src="scripts/jquery-2.1.3.js"></script>
 <script type="text/javascript" src="scripts/jquery-ui.js"></script>
+<script type="text/javascript" src="scripts/jquery.min.js"></script>
 
 <script type="text/javascript" src="scripts/dist/jquery.jqplot.min.js"></script>
-<script class="include"  type="text/javascript" src="scripts/dist/plugins/jqplot.pieRenderer.min.js"></script>
+<script class="include"  type="text/javascript" src="scripts/dist/plugins/jqplot.pieRenderer.js"></script>
 <script class="include"  type="text/javascript" src="scripts/dist/plugins/jqplot.donutRenderer.min.js"></script>
+<script type="text/javascript" src="scripts/dist/plugins/jqplot.bubbleRenderer.min.js"></script>
+<script type="text/javascript" src="scripts/dist/plugins/jqplot.dateAxisRenderer.min.js"></script>
 
 
 <link rel="stylesheet" type="text/css" href="stylesheet/jquery.jqplot.min.css">
@@ -15,29 +18,83 @@
 
 <script>
 $(document).ready(function(){
-	  var data = [
-	    ['Heavy Industry', 12],['Retail', 9], ['Light Industry', 14], 
-	    ['Out of home', 16],['Commuting', 7], ['Orientation', 9]
-	  ];
-	  var plot1 = jQuery.jqplot ('chart1', [data], 
-	    { 
-	      seriesDefaults: {
-	        // Make this a pie chart.
-	        renderer: jQuery.jqplot.PieRenderer, 
-	        rendererOptions: {
-	          // Put data labels on the pie slices.
-	          // By default, labels show the percentage of the slice.
-	          showDataLabels: true
-	        }
-	      }, 
-	      legend: { show:true, location: 'e' }
-	    }
-	  );
-	});
+	
+	var data = [ [ 'Heavy Industry', 12 ], [ 'Retail', 9 ],
+						[ 'Light Industry', 14 ], [ 'Out of home', 16 ],
+						[ 'Commuting', 7 ], [ 'Orientation', 9 ] ];
+				plot1 = jQuery.jqplot('chart1', [ data ], {
+					seriesDefaults : {
+						// Make this a pie chart.
+						renderer : jQuery.jqplot.PieRenderer,
+						rendererOptions : {
+							// Put data labels on the pie slices.
+							// By default, labels show the percentage of the slice.
+							showDataLabels : true
+						}
+					},
+					legend : {
+						show : true,
+						location : 'e'
+					}
+				});
+
+				temp = {
+					seriesStyles : {
+						seriesColors : [ 'red', 'orange', 'yellow', 'green',
+								'blue', 'indigo' ],
+						highlightColors : [ 'lightpink', 'lightsalmon',
+								'lightyellow', 'lightgreen', 'lightblue',
+								'mediumslateblue' ]
+					},
+					legend : {
+						fontSize : '8pt'
+					},
+					title : {
+						fontSize : '18pt'
+					},
+					grid : {
+						backgroundColor : 'rgb(211, 233, 195)'
+					}
+				};
+				plot1.themeEngine.newTheme('temp', temp);
+			});
+	function switch3() {
+		plot1.activateTheme('temp');
+	}
 </script>
 
+
+<script>
+	$(document).ready(
+			function() {
+
+				var arr = [ [ '2008-09-30 4:00PM', 123, 1236, "Acura" ],
+						[ '2008-10-30 4:00PM', 92, 1067, "Alfa Romeo" ],
+						[ '2008-11-30 4:00PM', 104, 1176, "AM General" ],
+];
+
+				plot5 = $.jqplot('chart3', [ arr ], {
+					title : 'Transparent Bubbles',
+					seriesDefaults : {
+						renderer : $.jqplot.BubbleRenderer,
+						rendererOptions : {
+							bubbleAlpha : 0.6,
+							highlightAlpha : 0.8
+						},
+						shadow : true,
+						shadowAlpha : 0.05
+					},
+					axes:{xaxis:{renderer:$.jqplot.DateAxisRenderer},
+						tickOptions:{formatString:'%b %#d, %y'},
+						tickInterval:'1 month'
+					}
+				});
+			});
+</script>
+
+
 </head>
-<body>
+<body onload="switch3();">
 hi
 <div id="chart1" style="height:300px; width:500px;"></div>
 <script>
@@ -46,7 +103,7 @@ $(document).ready(function(){
 	    ['Heavy Industry', 12],['Retail', 9], ['Light Industry', 14], 
 	    ['Out of home', 16],['Commuting', 7], ['Orientation', 9]
 	  ];
-	  var plot1 = jQuery.jqplot ('chart1', [data], 
+	  var plot4 = jQuery.jqplot ('chart5', [data], 
 	    { 
 	      seriesDefaults: {
 	        // Make this a pie chart.
@@ -62,5 +119,7 @@ $(document).ready(function(){
 	  );
 	});
 </script>
+<div id="chart3" style="height:300px; width:500px;"></div>	
+<div id="chart5" style="height:300px; width:500px;"></div>	
 </body>
 </html>
